Odkazy na jednotky

--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -8,7 +8,7 @@
 
 <a id="zluty-led"><h2>Žlutý led</h2></a>
 
-<p>Dělá se zcela tak jako předešlý, jenom že se musí celá čtvrt libra cukru na citronu ostrouhat a&nbsp;několik kapek v&nbsp;čistém klůcku rozmočeného šafránu přidat, aby to bylo žluté.</p>
+<p>Dělá se zcela tak jako předešlý, jenom že se musí celá čtvrt <a href="miry-a-vahy.html#libra" class="mav">libra</a> cukru na citronu ostrouhat a&nbsp;několik kapek v&nbsp;čistém klůcku rozmočeného šafránu přidat, aby to bylo žluté.</p>
 
 <a id="cerny-led"><h2>Černý led</h2></a>
 
