--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -22,7 +22,7 @@
 
 <a id="jicha-k-posypani-kolacu"><h2>Jícha k&nbsp;posypání koláčů</h2></a>
 
-<p>Rozdrob na vále šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> čerstvého másla ve čtvrt libře mouky a&nbsp;ve čtyřech lotech tlučeného cukru, hodně to promíchej a&nbsp;posyp tím velké koláče ku kávě.</p>
+<p>Rozdrob na vále šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> čerstvého másla ve čtvrt libře mouky a&nbsp;ve čtyřech <a href="miry-a-vahy.html#lot" class="mav">lotech</a> tlučeného cukru, hodně to promíchej a&nbsp;posyp tím velké koláče ku kávě.</p>
 
 <a id="pernik"><h2>Perník</h2></a>
 
