--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -68,7 +68,7 @@
 
 <a id="jine-fasirovane-karbanatky"><h2>Jiné fašírované karbanátky</h2></a>
 
-<p>Usekej <a href="miry-a-vahy.html#libra" class="mav">libru</a> telecího a&nbsp;libru vepřového masa, utři na mise čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> hovězího tuku, dej k&nbsp;němu to maso, jednu ostrouhanou, ve vodě namočenou a&nbsp;vymačkanou žemličku, tři míchané vejce, trochu tlučeného pepře, tři stroužky se solí utřeného česneku, půl drobně nasekané cibule a&nbsp;trochu soli, všecko dobře promíchej a&nbsp;dělej z&nbsp;toho kulaté karbanátky, pak je obal ve strouhané žemličce a&nbsp;usmaž v&nbsp;rozpáleném másle. Kdo není milovník česneku, cibule a&nbsp;koření může vše vynechat.</p>
+<p>Usekej <a href="miry-a-vahy.html#libra" class="mav">libru</a> telecího a&nbsp;<a href="miry-a-vahy.html#libra" class="mav">libru</a> vepřového masa, utři na mise čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> hovězího tuku, dej k&nbsp;němu to maso, jednu ostrouhanou, ve vodě namočenou a&nbsp;vymačkanou žemličku, tři míchané vejce, trochu tlučeného pepře, tři stroužky se solí utřeného česneku, půl drobně nasekané cibule a&nbsp;trochu soli, všecko dobře promíchej a&nbsp;dělej z&nbsp;toho kulaté karbanátky, pak je obal ve strouhané žemličce a&nbsp;usmaž v&nbsp;rozpáleném másle. Kdo není milovník česneku, cibule a&nbsp;koření může vše vynechat.</p>
 
 <a id="michane-karbanatky-s-kapustou"><h2>Míchané karbanátky s&nbsp;kapustou</h2></a>
 
