--- a/src/napoje.html
+++ b/src/napoje.html
@@ -6,7 +6,7 @@
 
 <a id="mandlove-mleko"><h2>Mandlové mléko</h2></a>
 
-<p>Oloupej a&nbsp;utluč čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých mandlí a&nbsp;4 hořké, a&nbsp;mezi tlučením přilévej vždy po lžíci vody. Když jsou mandle utlučeny, nalej na ně dva nebo tři <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vody, jak totiž husté mléko míti chceš, oslaď to náležitě a&nbsp;proceď to skrze čistý šat. Je to nápoj občerstvující pro zdravé i&nbsp;nemocné, jenom že pro nemocné se musejí hořké mandle vynechat.</p>
+<p>Oloupej a&nbsp;utluč čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> sladkých mandlí a&nbsp;4&nbsp;hořké, a&nbsp;mezi tlučením přilévej vždy po lžíci vody. Když jsou mandle utlučeny, nalej na ně dva nebo tři <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> vody, jak totiž husté mléko míti chceš, oslaď to náležitě a&nbsp;proceď to skrze čistý šat. Je to nápoj občerstvující pro zdravé i&nbsp;nemocné, jenom že pro nemocné se musejí hořké mandle vynechat.</p>
 
 <a id="puns"><h2>Punš</h2></a>
 
