--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -32,7 +32,7 @@
 
 <a id="omacka-z-koreni"><h2>Omáčka z&nbsp;koření</h2></a>
 
-<p>Udělej ze dvou <a href="miry-a-vahy.html#lot" class="mav">lotů</a> loje hnědou jíšku, dej do ní jednu nakrájenou cibuli, 10&nbsp;zrnek pepře a&nbsp;10 zrnek nového kořeni, kousek zázvoru, dva bobkové listy, kousek dymiánu, nalej na to hovězí polívky tolik, mnoho-li je na omáčku potřebí, a&nbsp;přidej k&nbsp;tomu asi dvě lžíce octa; když se vše hodně dlouho pospolu vařilo proceď to do hrnku; je-li omáčka příliš hustá přilej polívky, okus ji, a&nbsp;je-li málo kyselá, přidej krapýtek octa.</p>
+<p>Udělej ze dvou <a href="miry-a-vahy.html#lot" class="mav">lotů</a> loje hnědou jíšku, dej do ní jednu nakrájenou cibuli, 10&nbsp;zrnek pepře a&nbsp;10&nbsp;zrnek nového kořeni, kousek zázvoru, dva bobkové listy, kousek dymiánu, nalej na to hovězí polívky tolik, mnoho-li je na omáčku potřebí, a&nbsp;přidej k&nbsp;tomu asi dvě lžíce octa; když se vše hodně dlouho pospolu vařilo proceď to do hrnku; je-li omáčka příliš hustá přilej polívky, okus ji, a&nbsp;je-li málo kyselá, přidej krapýtek octa.</p>
 
 <a id="omacka-z-kerblika"><h2>Omáčka z&nbsp;kerblíka</h2></a>
 
