--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -2,7 +2,7 @@
 
 <a id="moucne-knedliky"><h2>Moučné knedlíky</h2></a>
 
-<p>Rozkrájej žemličku na kostky, usmaž ji pěkně do zlatova v&nbsp;přepouštěném másle a&nbsp;nech ji vystydnout; utři na míse kus nového másla, vraz do něho 6&nbsp;celých vajec jedno po druhém, po každém vejci dej lžičku pěkné mouky a&nbsp;lžičku sladké smetany, osol to a&nbsp;dobře to promíchej; potom vmíchej do toho tu smaženou žemličku a&nbsp;mouky tolik, aby, když se rukou na těsto plácne, na ruku se nepřilíplo. Nyní udělej hodně velké knedle, dej je do vařící slané vody a&nbsp;nech je vařit, jsou uvnitř dobře povařeny; potom rozkroj každý na čtyry čtvrtě, posyp je strouhanou žemličkovou kůrkou a&nbsp;polej je rozpáleným máslem. Tyto knedlíky jsou k&nbsp;černé rybě výborné.</p>
+<p>Rozkrájej žemličku na kostky, usmaž ji pěkně do zlatova v&nbsp;přepouštěném másle a&nbsp;nech ji vystydnout; utři na míse kus nového másla, vraz do něho 6&nbsp;celých vajec jedno po druhém, po každém vejci dej lžičku pěkné mouky a&nbsp;lžičku sladké smetany, osol to a&nbsp;dobře to promíchej; potom vmíchej do toho tu smaženou žemličku a&nbsp;mouky tolik, aby, když se rukou na těsto plácne, na ruku se nepřilíplo. Nyní udělej hodně velké knedle, dej je do vařící slané vody a&nbsp;nech je vařit, jsou uvnitř dobře povařeny; potom rozkroj každý na čtyry čtvrtě, posyp je strouhanou žemličkovou kůrkou a&nbsp;polej je rozpáleným máslem. Tyto knedlíky jsou k&nbsp;černé <a href="rozlicne-ryby.html#kapr-na-cerno">rybě výborné</a>.</p>
 
 <a id="jine-moucne-knedliky"><h2>Jiné moučné knedlíky</h2></a>
 
