--- a/src/jeste-nektera-postni-jidla.html
+++ b/src/jeste-nektera-postni-jidla.html
@@ -84,7 +84,7 @@
 
 <p>Uvař pěkná zemčata, dej je na mísu, rozmačkej a&nbsp;utři je s&nbsp;kouskem másla, vraz do nich 3&nbsp;celé vejce a&nbsp;3&nbsp;žloutky, a&nbsp;vmíchej do nich tolik mouky, aby se těsto na ruce nelíplo, vyválej ho na vále, pak z&nbsp;něho rozválej na dvě stébla tlusté listy, na jeden dělej hromádky z&nbsp;dobrých povidel, které se musejí osladit a&nbsp;připravit s&nbsp;citronovou kůrou a&nbsp;hřebíčkem, na to polož druhý list, vykrájej plechovým obloučkem pěkné kulaté koblihy a&nbsp;nech je v&nbsp;rozpáleném másle pěkně do zlatová usmažit. Do těchto koblih může se také dáti sekaninka z&nbsp;čerstvých hříbků a&nbsp;raků, totiž: usekej hříbky a&nbsp;nech je na másle hezky vysmahnout, dej k&nbsp;nim několik míchaných vajíček, usekané račí ocásky a&nbsp;klepýtka, trochu květu, kousek rozškubané, na másle dušené štiky, kousek račího másla, všecko dobře promíchej a&nbsp;nakládej s&nbsp;tím jako s&nbsp;povidlami.</p>
 
-<a id="zemcata-a-vejcemi"><h2>Zemčata a&nbsp;vejcemi</h2></a>
+<a id="zemcata-s-vejcemi"><h2>Zemčata s&nbsp;vejcemi</h2></a>
 
 <p>Uvař ne příliš do měkka pěkná malá zemčátka, oloupej a&nbsp;nakrájej je na koláčky; taktéž rozkrájej na koláčky šest na tvrdo uvařených vajec; nyní vymaž máslem buď plechovou formu nebo kameny kuthánek, na dno dej vrstvu zemčátek, na tyto vrstvu vajec, posyp to trochu tlučeným pepřem, postříkej čerstvým rozpuštěným máslem, pak dej opět vrstvu zemčat a&nbsp;vajec, posyp to zase– pepřem a&nbsp;postříkej máslem, a&nbsp;tak pokračuj, až je kuthánek na prst neplný; navrch musejí přijití zemčata; potom rozmíchej v&nbsp;žejdlíku dobrého mléka dva syrové žloutly, osol to, polej tím zemčátka jen co by se lehce potopily, poklad to povrchu kouskami másla a&nbsp;nech to do zlatova upect.</p>
 
