--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -26,7 +26,7 @@
 
 <a id="ruzovy-led"><h2>Růžový led</h2></a>
 
-<p>Smíchej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlačeného prosátého cukru s&nbsp;bílkovým sněhem, pak rozmoč několik chmírek šafránu v&nbsp;alkermesové šťávě <i>(Alkermessaft)</i>, dej ho do toho – tak je to růžové.</p>
+<p>Smíchej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlačeného prosátého cukru s&nbsp;bílkovým sněhem, pak rozmoč několik chmírek šafránu v&nbsp;alkermesové šťávě (Alkermessaft), dej ho do toho – tak je to růžové.</p>
 
 <p>Všech těchto ledů může se upotřebit k&nbsp;okrašlování dortů a&nbsp;k&nbsp;dělání oplatkových obloučků. Zvláště žlutý a&nbsp;bílý led jest výborný, když se na oplatek namaže a&nbsp;jako oblouček sušit nechá.</p>
 
