--- a/src/rozlicne-miseninky.html
+++ b/src/rozlicne-miseninky.html
@@ -18,5 +18,5 @@
 
 <a id="miseninka-se-hribkami"><h2>Míšeninka se hříbkami</h2></a>
 
-<p>Usuš drobnince rozkrájené hříbky nejdříve na čerstvém povětří, pak na vlažných kamnech nebo v&nbsp;troubě, aby se na prášek utlouct a&nbsp;prosát nechaly; když jsou prosáté, dej k&nbsp;nim stejné díly utlučeného květu, ustrouhané muškátové kuličky a&nbsp;malou částku zázvoru. Když se dá buď do polívky, nebo do omáčky anebo do postní nebo do masité míšeniny <i>(Ragout)</i> kávová lžička této míšeninky, dostane, to výbornou chuť. Místo hříbků mohou se vzíti také lanýže, nebo polovic hříbků a&nbsp;polovic lanýžů.</p>
+<p>Usuš drobnince rozkrájené hříbky nejdříve na čerstvém povětří, pak na vlažných kamnech nebo v&nbsp;troubě, aby se na prášek utlouct a&nbsp;prosát nechaly; když jsou prosáté, dej k&nbsp;nim stejné díly utlučeného květu, ustrouhané muškátové kuličky a&nbsp;malou částku zázvoru. Když se dá buď do polívky, nebo do omáčky anebo do postní nebo do masité míšeniny (Ragout) kávová lžička této míšeninky, dostane, to výbornou chuť. Místo hříbků mohou se vzíti také lanýže, nebo polovic hříbků a&nbsp;polovic lanýžů.</p>
 
