--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -40,7 +40,7 @@
 
 <p>Okrájej a&nbsp;připrav pěkně karfiol, a&nbsp;nech jej v&nbsp;hovězí polívce povařit; kuřátka pěkně očisti, zašpejluj, dej je na rendlík na kousek másla dusit (můžeš k&nbsp;nim také dát půl bílé cibule a&nbsp;kousky karfiolu) a&nbsp;podlévej je tou polívkou, v&nbsp;nížto se karfiol vařil, až jsou měkké; potom je dej na jiný čistý rendlík, do šťávy, v&nbsp;které se dusily nalej tu ostatní polívku z&nbsp;karfiolu, zapraž to bílou jištičkou, proceď to na kuřátka a&nbsp;okořeň trochu květem. Potom urovnej kuřátka do prostřed mísy, karfiol pěkně okolo, a&nbsp;chceš-li to míti ještě krásnější, tedy omoč polovic karfiolu ve vejci a&nbsp;ve strouhané žemličce, a&nbsp;vysmaž ho, pak dej vždy jednu růžičku smaženého a&nbsp;jednu růžičku vařeného karfiolu, tak je to ouhledné.</p>
 
-<p><i>NB. </i>Nejsou-li kuřátka, tedy se může i&nbsp;bez nich karfiol s&nbsp;takto připravenou omáčkou podati.</p>
+<p>NB. Nejsou-li kuřátka, tedy se může i&nbsp;bez nich karfiol s&nbsp;takto připravenou omáčkou podati.</p>
 
 <a id="karfiol-v-kremu-pro-8-osob"><h2>Karfiol v&nbsp;krému pro 8&nbsp;osob</h2></a>
 
