--- a/src/jeste-nektera-postni-jidla.html
+++ b/src/jeste-nektera-postni-jidla.html
@@ -86,7 +86,7 @@
 
 <a id="zemcata-s-vejcemi"><h2>Zemčata s&nbsp;vejcemi</h2></a>
 
-<p>Uvař ne příliš do měkka pěkná malá zemčátka, oloupej a&nbsp;nakrájej je na koláčky; taktéž rozkrájej na koláčky šest na tvrdo uvařených vajec; nyní vymaž máslem buď plechovou formu nebo kameny kuthánek, na dno dej vrstvu zemčátek, na tyto vrstvu vajec, posyp to trochu tlučeným pepřem, postříkej čerstvým rozpuštěným máslem, pak dej opět vrstvu zemčat a&nbsp;vajec, posyp to zase– pepřem a&nbsp;postříkej máslem, a&nbsp;tak pokračuj, až je kuthánek na prst neplný; navrch musejí přijití zemčata; potom rozmíchej v&nbsp;žejdlíku dobrého mléka dva syrové žloutly, osol to, polej tím zemčátka jen co by se lehce potopily, poklad to povrchu kouskami másla a&nbsp;nech to do zlatova upect.</p>
+<p>Uvař ne příliš do měkka pěkná malá zemčátka, oloupej a&nbsp;nakrájej je na koláčky; taktéž rozkrájej na koláčky šest na tvrdo uvařených vajec; nyní vymaž máslem buď plechovou formu nebo kameny kuthánek, na dno dej vrstvu zemčátek, na tyto vrstvu vajec, posyp to trochu tlučeným pepřem, postříkej čerstvým rozpuštěným máslem, pak dej opět vrstvu zemčat a&nbsp;vajec, posyp to zase pepřem a&nbsp;postříkej máslem, a&nbsp;tak pokračuj, až je kuthánek na prst neplný; navrch musejí přijití zemčata; potom rozmíchej v&nbsp;žejdlíku dobrého mléka dva syrové žloutly, osol to, polej tím zemčátka jen co by se lehce potopily, poklad to povrchu kouskami másla a&nbsp;nech to do zlatova upect.</p>
 
 <a id="omeletky-se-sardelemi"><h2>Omeletky se sardelemi</h2></a>
 
