Odkazy na jednotky

--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -178,7 +178,7 @@
 
 <a id="polivka-jeste-s-jinou-varenou-buchtou"><h2>Polívka ještě s&nbsp;jinou vařenou buchtou</h2></a>
 
-<p>Usekej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> vepřového, půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> telecího masa a&nbsp;lot hovězího tuku, dej k&nbsp;tomu dvě míchané vejce, půl ve vodě namočené, vymačkané žemličky, vše dohromady dobře usekej, pak to dej na mísu, vraz do toho dvě celé vejce, osol to, přidej k&nbsp;tomu trochu tlučeného květu, a&nbsp;všecko ještě hodně promíchej a&nbsp;utři; potom namoč ve studené vodě čistý servítek, vyždímej ho, dej do něho tu míchaninku, volně to zavaž a&nbsp;nech to v&nbsp;polívce hodinu vařit; pak to vyndej na prkénko, rozkrájej to na čtverhranné kousky, vlož je do mísy a&nbsp;nalej na ně polívku s&nbsp;houbičkami.</p>
+<p>Usekej půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> vepřového, půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> telecího masa a&nbsp;<a href="miry-a-vahy.html#lot" class="mav">lot</a> hovězího tuku, dej k&nbsp;tomu dvě míchané vejce, půl ve vodě namočené, vymačkané žemličky, vše dohromady dobře usekej, pak to dej na mísu, vraz do toho dvě celé vejce, osol to, přidej k&nbsp;tomu trochu tlučeného květu, a&nbsp;všecko ještě hodně promíchej a&nbsp;utři; potom namoč ve studené vodě čistý servítek, vyždímej ho, dej do něho tu míchaninku, volně to zavaž a&nbsp;nech to v&nbsp;polívce hodinu vařit; pak to vyndej na prkénko, rozkrájej to na čtverhranné kousky, vlož je do mísy a&nbsp;nalej na ně polívku s&nbsp;houbičkami.</p>
 
 <a id="polivka-s-drstkami"><h2>Polívka s&nbsp;dršťkami</h2></a>
 
