--- a/src/miry-a-vahy.html
+++ b/src/miry-a-vahy.html
@@ -16,6 +16,10 @@
 
 <p class="c">4 gramy</p>
 
+<a id="maz"><h2>Máz</h2></a>
+
+<p class="c">1,415 litru</p>
+
 <a id="koflicek"><h2>Koflíček</h2></a>
 
 <p class="c">Hrníček</p>
