--- a/src/napoje.html
+++ b/src/napoje.html
@@ -86,5 +86,5 @@
 
 <a id="jecna-voda"><h2>Ječná voda</h2></a>
 
-<p>Přeber <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ječmena, nalej na něj máz vody a&nbsp;nech jej hodně vařit; kdyby se to příliš vyvařilo, můžeš přilejt vody; načež to přeceď, a&nbsp;máš-li med, oslaď to dle libosti medem, pakli ne, tedy cukrem, a&nbsp;proceď k&nbsp;tomu z&nbsp;jednoho citronu šťávu. Tento nápoj jest pro nemocné zvláště prospěšný.</p>
+<p>Přeber <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> ječmena, nalej na něj <a href="miry-a-vahy.html#maz" class="mav">máz</a> vody a&nbsp;nech jej hodně vařit; kdyby se to příliš vyvařilo, můžeš přilejt vody; načež to přeceď, a&nbsp;máš-li med, oslaď to dle libosti medem, pakli ne, tedy cukrem, a&nbsp;proceď k&nbsp;tomu z&nbsp;jednoho citronu šťávu. Tento nápoj jest pro nemocné zvláště prospěšný.</p>
 
