--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -18,7 +18,7 @@
 
 <a id="ocet-rybizovy"><h2>Ocet rybízový</h2></a>
 
-<p>Rozmačkej dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> rybízu, nalej na něj máz dobrého octa a&nbsp;nech ho čtyry dni stát, načež ho skrze plátno proceď a&nbsp;uschovej. Může se též jako malinový s&nbsp;cukrem zvařit.</p>
+<p>Rozmačkej dva <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíky</a> rybízu, nalej na něj <a href="miry-a-vahy.html#maz" class="mav">máz</a> dobrého octa a&nbsp;nech ho čtyry dni stát, načež ho skrze plátno proceď a&nbsp;uschovej. Může se též jako malinový s&nbsp;cukrem zvařit.</p>
 
 <a id="ocet-fialkovy"><h2>Ocet fialkový</h2></a>
 
