--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 <li><a href="sladke-rosoly.html">Sladké rosoly</a></li>
 <li><a href="zmrzliny.html">Zmrzliny</a></li>
 <li><a href="napoje.html">Nápoje</a></li>
-<li><a href="ovocni-zavareninky.html">Ovocní zavařeninky</a></li>
+<li><a href="ovocne-zavareninky.html">Ovocné zavařeninky</a></li>
 <li><a href="zavarene-cele-ovoce.html">Zavařené celé ovoce</a></li>
 <li><a href="rozlicne-miseninky.html">Rozličné míšeninky</a></li>
 <li><a href="rozlicna-masla.html">Rozličná másla</a></li>
