--- a/src/ovocne-zavareninky.html
+++ b/src/ovocne-zavareninky.html
@@ -1,4 +1,4 @@
-<h1><a href="index.html">Ovocní zavařeninky</a></h1>
+<h1><a href="index.html">Ovocné zavařeninky</a></h1>
 
 <p>Hodí se k&nbsp;nadívání dortů, koblih a&nbsp;jiných pamlsek.</p>
 
