--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -133,7 +133,7 @@
 	<li><a href="nakypy.html#nakyp-tvarohovy">Nákyp tvarohový</a></li>
 	<li><a href="zadelavana-zverina.html#divoka-kachna">Dušené kachny, divoké</a> aneb domácí, s&nbsp;okolkem z&nbsp;máslového těsta</li>
 	<li><a href="pecene.html#zajic">Pečený zajíc</a> a&nbsp;<a href="pecene.html#kapoun-na-zpusob-bazanta">kapoun</a></li>
-	<li><a href="salaty.html#salat-celerovy">Salát celerový</a> a&nbsp;<a href="ovocni-zavareninky.html#sipkova-zavareninka">šípkový kompot</a></li>
+	<li><a href="salaty.html#salat-celerovy">Salát celerový</a> a&nbsp;<a href="ovocne-zavareninky.html#sipkova-zavareninka">šípkový kompot</a></li>
 	<li>Šunka s&nbsp;<a href="masite-rosoly.html#aspik">aspikem</a></li>
 	<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html#kolace-zloutkove">Žloutkové koláče</a></li>
 	<li><a href="cukrovinky.html#mandlove-obloucky">Mandlové obloučky</a>, <a href="cukrovinky.html#spanelske-vetry-s-mandlemi">španělské větry</a>, pokroutky z&nbsp;koření</li>
