--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -120,7 +120,7 @@
 
 <a id="pecene-rizky-z-lososa"><h2>Pečené řízky z&nbsp;lososa</h2></a>
 
-<p>Nakrájej z&nbsp;lososa na dva prsty široké řízky, předej, osol a&nbsp;posyp je pepřem, a&nbsp;nech je tak asi hodinu přikryté stát; potom je omoč v&nbsp;rozpuštěném, žloutkami rozmíchaném másle, obal je ve strouhané žemličce, polož je na máslem pomazaný talíř nebo na plechový pekáček, pokrop je rozpuštěným máslem a&nbsp;nech je v&nbsp;troubě do zlatová upect; pak je urovnej na ohřátou mísu i&nbsp;s&nbsp;tou opadanou žemličkou, a&nbsp;buď je zaceď citronovou šťávou, anebo poklaď vůkol citronové čtvrtky, aby sobě každý dle libosti šťávu sám nacedil. –Takto se může také sumec i&nbsp;kapr připravovat.</p>
+<p>Nakrájej z&nbsp;lososa na dva prsty široké řízky, předej, osol a&nbsp;posyp je pepřem, a&nbsp;nech je tak asi hodinu přikryté stát; potom je omoč v&nbsp;rozpuštěném, žloutkami rozmíchaném másle, obal je ve strouhané žemličce, polož je na máslem pomazaný talíř nebo na plechový pekáček, pokrop je rozpuštěným máslem a&nbsp;nech je v&nbsp;troubě do zlatová upect; pak je urovnej na ohřátou mísu i&nbsp;s&nbsp;tou opadanou žemličkou, a&nbsp;buď je zaceď citronovou šťávou, anebo poklaď vůkol citronové čtvrtky, aby sobě každý dle libosti šťávu sám nacedil. Takto se může také sumec i&nbsp;kapr připravovat.</p>
 
 <a id="uzeny-losos-v-papiru-peceny"><h2>Uzený losos v&nbsp;papíru pečený</h2></a>
 
