--- a/src/dorty.html
+++ b/src/dorty.html
@@ -36,7 +36,7 @@
 
 <a id="dort-piskotovy"><h2>Dort piškotový</h2></a>
 
-<p>Udělej sníh z&nbsp;15ti bílků, pak do něho vmíchej těch 15&nbsp;žloutků jeden po druhém, dej k&nbsp;tomu tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, na kterém jsi dříve byla ostrouhala kůru s&nbsp;celého citronu, dobře to půl hodiny míchej, potom k&nbsp;tomu přidej tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> pěkné, dobře prosáté mouky, a&nbsp;ještě to čtvrt hodiny míchej, načež to vlej do vymazané a&nbsp;trochu žemličkovou kůrkou vysypané formy, aby ale zůstala na dva prsty neplná, a&nbsp;nech to zlehounka pect. Když je dort upečen, nech ho chvilku stát, pak ho vyklop, a&nbsp;když je studený, teprve ho obtáhni ledem, při mechovém dortu uvedeným, a&nbsp;rozličně jej okrášli.</p>
+<p>Udělej sníh z&nbsp;15 bílků, pak do něho vmíchej těch 15&nbsp;žloutků jeden po druhém, dej k&nbsp;tomu tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, na kterém jsi dříve byla ostrouhala kůru s&nbsp;celého citronu, dobře to půl hodiny míchej, potom k&nbsp;tomu přidej tři čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> pěkné, dobře prosáté mouky, a&nbsp;ještě to čtvrt hodiny míchej, načež to vlej do vymazané a&nbsp;trochu žemličkovou kůrkou vysypané formy, aby ale zůstala na dva prsty neplná, a&nbsp;nech to zlehounka pect. Když je dort upečen, nech ho chvilku stát, pak ho vyklop, a&nbsp;když je studený, teprve ho obtáhni ledem, při mechovém dortu uvedeným, a&nbsp;rozličně jej okrášli.</p>
 
 <a id="dort-mramorovy"><h2>Dort mramorový</h2></a>
 
