--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -4,7 +4,7 @@
 
 <a id="bily-led"><h2>Bílý led</h2></a>
 
-<p>Utluč čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> pěkného cukru na mouku a&nbsp;prosej ho (tak se to musi stát ua každý led), pak ho dej na šáleček, přidej k&nbsp;němu z&nbsp;jednoho bílku sněhu, a&nbsp;hodně to tři, potom do toho naceď z&nbsp;půl citronu šťávu, tak led pěkně zbělí; musí se ale nejméně půl hodiny míchat.</p>
+<p>Utluč čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> pěkného cukru na mouku a&nbsp;prosej ho (tak se to musí prosát na každý led), pak ho dej na šáleček, přidej k&nbsp;němu z&nbsp;jednoho bílku sněhu, a&nbsp;hodně to tři, potom do toho naceď z&nbsp;půl citronu šťávu, tak led pěkně zbělí; musí se ale nejméně půl hodiny míchat.</p>
 
 <a id="zluty-led"><h2>Žlutý led</h2></a>
 
