--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -22,7 +22,7 @@
 
 <a id="polivka-zluta-s-rosolem-pro-8-neb-12-osob"><h2>Polívka žlutá s&nbsp;rosolem pro 8&nbsp;neb 12&nbsp;osob</h2></a>
 
-<p>Vraz do hrnku 12&nbsp;čerstvých vajec, vlej k&nbsp;tomu <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vlažné hovězí polívky, hodně to rozkloktej (rozkverluj) a&nbsp;dej k&nbsp;tomu trochu květu; pak obvaz dobře hrnek papírem a&nbsp;pověs ho do vařiči vody tak, aby tam žádná voda nemohla, a&nbsp;nech to hodinu vařit; potom vybírej malou lžičkou rosol po kouskách a&nbsp;vlož je do mísy. Vraz do hrnku šest žloutků, rozkloktej je s&nbsp;vlažnou polívkou, pak na to nalej vařící dobrou polívku, ještě ji hodně rozkloktej a&nbsp;potom ji vlej do mísy na tu ssedlinu.</p>
+<p>Vraz do hrnku 12&nbsp;čerstvých vajec, vlej k&nbsp;tomu <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlík</a> vlažné hovězí polívky, hodně to rozkloktej (rozkverluj) a&nbsp;dej k&nbsp;tomu trochu květu; pak obvaz dobře hrnek papírem a&nbsp;pověs ho do vařiči vody tak, aby tam žádná voda nemohla, a&nbsp;nech to hodinu vařit; potom vybírej malou lžičkou rosol po kouskách a&nbsp;vlož je do mísy. Vraz do hrnku šest žloutků, rozkloktej je s&nbsp;vlažnou polívkou, pak na to nalej vařící dobrou polívku, ještě ji hodně rozkloktej a&nbsp;potom ji vlej do mísy na tu sedlinu.</p>
 
 <a id="polivka-s-mozeckem-pro-8-osob"><h2>Polívka s&nbsp;mozečkem pro 8&nbsp;osob</h2></a>
 
