Odkazy na libru

--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -122,7 +122,7 @@
 
 <a id="cukrovane-mandle"><h2>Cukrované mandle</h2></a>
 
-<p>Libru vybraných sladkých mandlí dej do mosazného kotlíčku a&nbsp;nech je chvilku na uhlí, až jsou křehké. Do jiného mosazného kotlíčku dej 3&nbsp;čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, a&nbsp;nech ho hezky hustě zavařit, až se táhne; pak do něho vhoď ty mandle a&nbsp;míchej nimi, až se vůkol v&nbsp;cukru obalí. Potom utluč cukr a&nbsp;skořici, přimíchej k&nbsp;tomu trošinku pěkné mouky, dej to na mísu a&nbsp;vhod do toho ty mandle, aby se hezky obalily a&nbsp;jedna od druhé oddělily; pak je nech vystydnout.</p>
+<p><a href="miry-a-vahy.html#libra" class="mav">Libru</a> vybraných sladkých mandlí dej do mosazného kotlíčku a&nbsp;nech je chvilku na uhlí, až jsou křehké. Do jiného mosazného kotlíčku dej 3&nbsp;čtvrtě <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, a&nbsp;nech ho hezky hustě zavařit, až se táhne; pak do něho vhoď ty mandle a&nbsp;míchej nimi, až se vůkol v&nbsp;cukru obalí. Potom utluč cukr a&nbsp;skořici, přimíchej k&nbsp;tomu trošinku pěkné mouky, dej to na mísu a&nbsp;vhod do toho ty mandle, aby se hezky obalily a&nbsp;jedna od druhé oddělily; pak je nech vystydnout.</p>
 
 <a id="smazene-mandle"><h2>Smažené mandle</h2></a>
 
