--- a/src/ovocne-zavareninky.html
+++ b/src/ovocne-zavareninky.html
@@ -32,7 +32,7 @@
 
 <a id="tresnova-zavareninka"><h2>Třešňová zavařeninka</h2></a>
 
-<p>Libru pěkných vyloupaných třešní a&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> protlučeného cukru dej na čistý rendlík a&nbsp;nech to vařit. Jelikož třešně méně ostrosti v&nbsp;sobě chovají nežli višně, tedy je musíš nechat hodně do hustá zvařit, aby se nepokazily; potom je uschovej jako předešlé.</p>
+<p><a href="miry-a-vahy.html#libra" class="mav">Libru</a> pěkných vyloupaných třešní a&nbsp;půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> protlučeného cukru dej na čistý rendlík a&nbsp;nech to vařit. Jelikož třešně méně ostrosti v&nbsp;sobě chovají nežli višně, tedy je musíš nechat hodně do hustá zvařit, aby se nepokazily; potom je uschovej jako předešlé.</p>
 
 <a id="jahodova-zavareninka"><h2>Jahodová zavařeninka</h2></a>
 
